# RISC-Zero-projects

tax-collector-puzzle/: README.md
tax-collector-puzzle/web-folder/: package-lock.json
tax-collector-puzzle/web-folder/puzzle-app/: package-lock.json  package.json
tax-collector-puzzle/web-folder/puzzle-app/src/: App.tsx
tax-collector-puzzle/web-folder/puzzle-app/src/components/: AdminPage.tsx  UserSubmission.tsx
tax-collector-puzzle/zkvm/: README.md  dev.http
tax-collector-puzzle/zkvm/core/: cargo.toml
tax-collector-puzzle/zkvm/core/src/: admin.rs  lib.rs
tax-collector-puzzle/zkvm/host/: Cargo.toml
tax-collector-puzzle/zkvm/host/src/: main.rs
tax-collector-puzzle/zkvm/methods/guest/: Cargo.toml
tax-collector-puzzle/zkvm/methods/guest/src/: main.rs
