[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "0.20.0-rc.1", features = ["prove"] }
risc0-binfmt = {version = "0.20.0-rc.1"}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = {version = "1.0", features = ['derive']}
puzzle-core = {path = "../core"}
tokio = { version = "1.35.1", features = ["full"] }
axum = {version = "0.7.4", features = ["macros"]}
once_cell = "1.19.0"
tower-http = { version = "0.5.1", features = ["cors"] }
serde_json = "1.0.111"